--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form', book: @book %>
 
-<%= link_to 'Show', @book %> |
-<%= link_to 'Back', books_path %>
+<%= link_to t('activerecord.attributes.book.show'), @book %> |
+<%= link_to t('activerecord.attributes.book.back'), books_path %>
