--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -3,6 +3,7 @@
 <table>
   <thead>
     <tr>
+      <th><%= User.human_attribute_name(:icon) %></th>
       <th><%= User.human_attribute_name(:email) %></th>
       <th><%= User.human_attribute_name(:name) %></th>
       <th><%= User.human_attribute_name(:postal_code) %></th>
@@ -14,6 +15,11 @@
   <tbody>
     <% @users.each do |user| %>
       <tr>
+        <% if user.avatar.attached? %>
+          <td><%= image_tag user.avatar.variant(resize: '100x100') %></td>
+        <% else %>
+          <td>  </td>
+        <% end %>
         <td><%= user.email %></td>
         <td><%= user.name %></td>
         <td><%= user.postal_code %></td>
