--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,15 @@
 <h1><%= t('views.common.title_show', name: User.model_name.human) %></h1>
 
 <p>
+  <strong><%= User.human_attribute_name(:icon) %>:</strong>
+  <% if @user.avatar.attached? %>
+    <%= image_tag @user.avatar.variant(resize: '100x100') %>
+  <% else %>
+    <td>  </td>
+  <% end %>
+</p>
+
+<p>
   <strong><%= User.human_attribute_name(:email) %>:</strong>
   <%= @user.email %>
 </p>
